--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
-  <title>Sorting Visualiser</title>
+  <title>Algo Visualiser</title>
 </head>
 
 <body>
@@ -38,7 +38,7 @@
     <div class="container-fluid">
 
       <!-- first item: brand name -->
-      <a class="navbar-brand" href="/">Sorting-Visualiser</a>
+      <a class="navbar-brand" href="/">Algo-Visualiser</a>
 
       <!-- this is the button when it collapses due to small screen size (data-bs-target must match the ID of the div below)-->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
